# mpz_matmul

./: .gitignore  CMakeLists.txt  README.md  makefile  test_rforest.c
benchmark/: bench_matmul.c
include/: hwmpz.h  mpnfft.h  mpzfft.h  mpzfft_moduli.h
include/fft62/: cufft62_thresholds.h  cufftwrapper.cuh  fft62.h
src/: hwmpz.c  moduli.c  mpnfft.c  mpzfft.c  reduce.c  split_reduce.c
src/fft62/: cufftwrapper.cu
src/include/: cucrt.cuh  cufftwrapper.cuh  curecompose.cuh  hwmpz.h
src/lib/: cucrt.cu  cufftwrapper.cu  curecompose.cu  hwmpz.c
tests/: test_matmul.c
writing/: algorithm.md
